--- a/examples/index.html
+++ b/examples/index.html
@@ -10,16 +10,18 @@
 
 
 
-<div class="">
-  First name:<br>
-  <input type="text" id="xgh" name="firstname" class="auto-save"><br>
+  <div class="">
+    First name:<br>
+    <input type="text" id="xgh" name="firstname" class="auto-save">
+    <br><br>
 
 
-  Description:<br>
-  <textarea name="name" id="uzt" rows="8" cols="80" class="auto-save"></textarea><br>
+    Description:<br>
+    <textarea name="name" id="uzt" rows="8" cols="80" class="auto-save"></textarea>
+    <br><br>
 
 
-  Preferred car manufacturer :<br>
+    Preferred car manufacturer :<br>
     <select id="dfj" class="auto-save">
       <option value="none" selected>--</option>
       <option value="volvo">Volvo</option>
@@ -27,27 +29,33 @@
       <option value="mercedes">Mercedes</option>
       <option value="audi">Audi</option>
     </select>
-<br>
+    <br><br>
 
     Preferred car manufacturer (Multiple) :<br>
-      <select id="dfjm" class="auto-save" multiple>
-        <option value="none" selected>--</option>
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="mercedes">Mercedes</option>
-        <option value="audi">Audi</option>
-      </select>
+    <select id="dfjm" class="auto-save" multiple>
+      <option value="none" selected>--</option>
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+    </select>
+    <br><br>
+
+    Gender :<br>
+    <input id="gho" class="auto-save" type="radio" name="gender" value="female"> Female<br>
+    <input id="jdw" class="auto-save" type="radio" name="gender" value="other"> Male
+    <br><br>
+
+
+    Accept AGB :<br>
+    <input id="ioo" class="auto-save" type="checkbox" name="AGB">
+
+  </div>
 
 
 
-
-
-</div>
-
-
-
-<br><br><br><br>
-<button type="button" name="button" onclick="dstry()">Destroy all data</button>
+  <br><br><br><br>
+  <button type="button" name="button" onclick="dstry()">Destroy all data</button>
 
 </body>
 </html>
