Ad support for inputs filled with browser's Autocomplete

--- a/examples/index.html
+++ b/examples/index.html
@@ -60,7 +60,7 @@
 </body>
 </html>
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="../savy.js"></script>
+<script type="text/javascript" src="../savy.min.js"></script>
 <script type="text/javascript">
 
 //$('.auto-save').savy('load') --> can be used without callback
